# python-confluent-cli-wrapper

./: CONTRIBUTING.md  README.md  pyproject.toml
confluent/cli/commands/: environment.e2e.test.py  kafka_cluster.e2e.test.py  kafka_topic.e2e.test.py  login.e2e.test.py
confluent/cli/utils/: parsers.e2e.test.py
