[tool.poetry]
name = "python-confluent-cli-wrapper"
version = "1.0.0"
description = "Confluent CLI Wrapper for Python"
authors = ["Alan S. Ferreira <alansferreira1984@gmail.com>"]
readme = "README.md"
packages = [
  { include = "confluent/cli/utils/parsers.py"}, 
  { include = "confluent/cli/commands/environment.py"}, 
  { include = "confluent/cli/commands/kafka_cluster.py"}, 
  { include = "confluent/cli/commands/kafka_topic.py"}, 
  { include = "confluent/cli/commands/login.py"}
]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = "^1.26.12"
requests = "^2.28.1"
commitizen = "^2.37.1"
pre-commit = "^2.20.0"
ruamel-yaml = "^0.17.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "$version"
version_files = [
  "pyproject.toml:version"
]